--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,42 +1,26 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Assistant:wght@300;400;500;600;700;800&display=swap');
+
+:root {
+  --primary: #6C5DD3;       
+  --primary-light: #CFC8FF; 
+  
+  --text-dark: #11142D;     
+  --text-gray: #808191;    
+  
+  --glass-bg: rgba(255, 255, 255, 0.65); 
+  --glass-border: 1px solid rgba(255, 255, 255, 0.8);
+  
+  --radius: 24px;           
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+body {
+  margin: 0;
+  font-family: 'Assistant', sans-serif; 
+  color: var(--text-dark);
+  
+  background: #F0F3F9;
+  background: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
+  
+  height: 100vh;
+  overflow: hidden; 
 }
